commit finish development

--- a/public/index.html
+++ b/public/index.html
@@ -32,21 +32,29 @@
             </p>
 
             <div class="relative w-full h-fit flex justify-center mt-5">
-                <div id="container-team-name" class="z-10 w-5/6 h-full flex flex-col justify-center items-center text-primary p-3">
+                <div class="container-team-name z-10 w-5/6 h-full flex flex-col justify-center items-center text-gray-text p-3">
                     <p class="text-2xl">
                         Team
                     </p>
-                    <p id="team-name" class="text-5xl font-bold tracking-tight mt-3"></p>
+                    <p class="team-name text-5xl font-bold tracking-tight mt-3"></p>
                 </div>
             </div>
         </section>
         <section class="app-section" id="question-section">
             <div class="relative flex flex-col h-full">
                 <img src="assets/img/participant/header_question.png" class="w-full h-auto">
+                <div class="absolute top-6 left-0 right-0 flex justify-center h-fit">
+                    <div class="container-team-name z-10 h-full flex flex-col justify-center items-center text-gray-text py-1 px-10">
+                        <p class="text-xs">
+                            Team
+                        </p>
+                        <p class="team-name text-lg font-bold tracking-tight"></p>
+                    </div>
+                </div>
 
                 <div class="timer-box">
-                    <img src="assets/img/timer_icon.png" class="w-8 aspect-square mr-1">
-                    <p class="text-xl font-bold text-primary w-16">
+                    <img src="assets/img/timer_icon.png" class="w-6 aspect-square mr-1">
+                    <p class="text-lg font-bold text-primary w-12">
                         <span class="minutes">00</span>:<span class="seconds">00</span>
                     </p>
                 </div>
