--- a/public/screen.html
+++ b/public/screen.html
@@ -22,7 +22,7 @@
     <body room="" class="muted">
         <section class="app-section bg-cover" id="cover-section">
         </section>
-        <section class="app-section bg-question" id="question-section">
+        <section class="app-section bg-main" id="question-section">
             <header class="relative w-full h-fit">
                 <img src="assets/img/screen/header-question.png">
 
@@ -59,8 +59,8 @@
         <section class="app-section bg-main" id="ranking-section">
             <img src="assets/img/screen/header-ranking.png">
 
-            <main class="container mt-5">
-                <div id="container-ranking" class="w-full flex justify-between !px-12 mt-5">
+            <main class="container">
+                <div id="container-ranking" class="w-full flex justify-center gap-10 !px-12 mt-5">
                 </div>
             </main>
         </section>
