--- a/public/index.html
+++ b/public/index.html
@@ -27,28 +27,28 @@
         <section class="app-section" id="home-section">
             <img src="assets/img/participant/header_home.png" class="w-full h-auto">
 
-            <p class="font-bold text-3xl text-gray-text text-center mt-10">
+            <p class="font-bold text-2xl text-gray-text text-center mt-10">
                 You are part of
             </p>
 
-            <div class="relative w-full h-fit flex justify-center mt-5">
-                <div class="container-team-name z-10 w-5/6 h-full flex flex-col justify-center items-center text-gray-text p-3">
+            <div class="relative flex justify-center mt-5">
+                <div class="container-team-name z-10 w-5/6 flex flex-col justify-center items-center text-gray-text p-3">
                     <p class="text-2xl">
                         Team
                     </p>
-                    <p class="team-name text-5xl font-bold tracking-tight mt-3"></p>
+                    <p class="team-name text-4xl font-bold tracking-tight mt-3"></p>
                 </div>
             </div>
         </section>
         <section class="app-section" id="question-section">
             <div class="relative flex flex-col h-full">
                 <img src="assets/img/participant/header_question.png" class="w-full h-auto">
-                <div class="absolute top-6 left-0 right-0 flex justify-center h-fit">
+                <div class="absolute top-6 left-0 right-0 flex justify-center">
                     <div class="container-team-name z-10 h-full flex flex-col justify-center items-center text-gray-text py-1 px-10">
-                        <p class="text-xs">
+                        <p class="text-[0.5rem]">
                             Team
                         </p>
-                        <p class="team-name text-lg font-bold tracking-tight"></p>
+                        <p class="team-name text-sm font-bold tracking-tight"></p>
                     </div>
                 </div>
 
