create images question graphics

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 </head>
 <body class="max-w-3xl mx-auto">
 <main class="flex flex-col w-full h-full relative bg-main">
-    <div class="relative w-full h-[calc(100%-theme(spacing.10))]">
+    <div class="relative w-full h-full">
         <section class="app-section" id="home-section">
             <img src="assets/img/participant/header_home.png" class="w-full h-auto">
 
@@ -72,26 +72,12 @@
                 </div>
             </div>
         </section>
-        <section id="survey-section" class="app-section">
-            <img src="assets/img/participant/header_home.png" class="w-full h-auto">
-
-            <p>
-                Thank you<br>
-                for your<br>
-                participation!
-            </p>
-            <p>
-                Please submit your feedback<br>
-                at the link below
-            </p>
-
-            <a id="survey-link" class="block underline underline-offset-2" target="_blank">Share your feedback</a>
-        </section>
     </div>
-
-    <div class="w-full flex justify-center my-4">
-        <img src="assets/img/participant/logo.png" class="w-1/2 h-auto">
-    </div>
+    <footer>
+        <div class="w-full flex justify-center my-4">
+            <img src="assets/img/participant/logo.png" class="w-1/2 h-auto">
+        </div>
+    </footer>
 </main>
 
 </body>
