--- a/public/screen.html
+++ b/public/screen.html
@@ -40,7 +40,7 @@
                 <div class="qa-container flex flex-col !px-12 mt-5">
                     <div id="container-team-scores" class="w-full flex"></div>
 
-                    <div class="relative my-7">
+                    <div class="question-box-container-outer">
                         <div class="question-box-container">
                             <div class="question-box-container-inner">
                                 <p class="text-center question-text-number text-4xl font-black mb-3"></p>
